logs/filepath.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/filepath'...
Compiling './lib/python3.5/site-packages/filepath/_filepath.py'...
***   File "./lib/python3.5/site-packages/filepath/_filepath.py", line 179
    except WindowsError, winErrObj:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/filepath/_runtime.py'...
***   File "./lib/python3.5/site-packages/filepath/_runtime.py", line 14
    major = (hv & 0xff000000L) >> 24
                            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/filepath/test'...
Compiling './lib/python3.5/site-packages/filepath/test/test_paths.py'...
***   File "./lib/python3.5/site-packages/filepath/test/test_paths.py", line 470
    for mode in (0555, 0777):
                    ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/filepath-0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
